# temporal-prolog

./: .gitignore  CHANGELOG.md  README.md  temporal-prolog.cabal
.github/workflows/: ci.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  temporal-prolog-0.1.0.0-inplace.conf
examples/: WALKTHROUGH.md  append.tpl  eventually.tpl  foot_warmer.tpl  foot_warmer_full.tpl  mutual_exclusion.tpl  next_step.tpl  paper_examples.tpl  process_control.tpl  since_after.tpl  temperature.tpl  temporal_test.tpl  traffic_light.tpl
src/TemporalProlog/: Interpreter.hs  Normalizer.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  Unification.hs
test/: Main.hs
