cabal-version:   3.14
name:            temporal-prolog
version:         0.1.0.0
license:         NONE
author:          Samuel Schlesinger
maintainer:      sgschlesinger@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        TemporalProlog.Syntax
        TemporalProlog.Unification
        TemporalProlog.Parser
        TemporalProlog.PrettyPrint
        TemporalProlog.Normalizer
        TemporalProlog.Interpreter
    build-depends:
        base ^>=4.18.3.0,
        containers,
        megaparsec,
        mtl,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite temporal-prolog-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        temporal-prolog,
        containers,
        hspec,
        megaparsec
    hs-source-dirs:   test
    default-language: Haskell2010

executable temporal-prolog
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        temporal-prolog,
        containers,
        haskeline,
        megaparsec,
        mtl,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
