cabal-version:   3.14
name:            temporal-prolog
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
synopsis:        A temporal logic programming language based on Sakuragawa (1986)
description:
    Temporal Prolog extends standard Prolog with temporal operators from
    linear temporal logic, computing a sequence of worlds (sets of ground
    atoms) over discrete time steps. Conditions may reference past worlds
    via operators like @\@@ (previous), @#@ (has-been), and @?@ (once),
    while results may project into the future with @always@, @until@,
    @atnext@, and @next@. Includes a five-step normalization pipeline, a
    stratified least-fixed-point interpreter with negation-as-failure, and
    backward chaining for recursive pattern functions.
category:        Language
author:          Samuel Schlesinger
maintainer:      sgschlesinger@gmail.com
build-type:      Simple
tested-with:     GHC == 9.6.7
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        TemporalProlog.Syntax
        TemporalProlog.Unification
        TemporalProlog.Parser
        TemporalProlog.PrettyPrint
        TemporalProlog.Normalizer
        TemporalProlog.Interpreter
    build-depends:
        base ^>=4.18.3.0,
        containers,
        megaparsec,
        mtl,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite temporal-prolog-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        temporal-prolog,
        containers,
        hspec,
        megaparsec
    hs-source-dirs:   test
    default-language: Haskell2010

executable temporal-prolog
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        temporal-prolog,
        containers,
        haskeline,
        megaparsec,
        mtl,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
